third_party/rust/chromium_crates_io/vendor/cxx-1.0.135/tests/ui/cxx_crate_name_qualified_cxx_string.stderr
error: unexpected `cxx::` qualifier found in a `#[cxx::bridge]`
 --> tests/ui/cxx_crate_name_qualified_cxx_string.rs:5:20
  |
5 |         fn bar(x: &cxx::CxxString);
  |                    ^^^^^^^^^^^^^^
