third_party/rust/chromium_crates_io/vendor/cxx-1.0.135/tests/ui/cxx_crate_name_qualified_cxx_string.rs
#[cxx::bridge]
mod ffi {
    extern "Rust" {
        fn foo(x: CxxString);
        fn bar(x: &cxx::CxxString);
    }
}

fn foo(_: &cxx::CxxString) {
    todo!()
}

fn bar(_: &cxx::CxxString) {
    todo!()
}

fn main() {}
